--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
-<head>
 <html lang="fr">
-    <meta charset=" UTF-8" viewport="width=device-width, initial-scale=1.0">
-<title>TP0: Tableaux- Gestion Des Emails</title>
-<link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Gestion des Emails</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        form { margin-bottom: 20px; }
+        input[type="submit"], button { margin-top: 10px; }
+    </style>
 </head>
-    </html>
+<body>
+
+<h1>Gestion des Emails</h1>
+
+<!-- Upload fichier Emails.txt -->
+<form action="upload.php" method="post" enctype="multipart/form-data">
+    <label for="file">Télécharger Emails.txt :</label><br>
+    <input type="file" name="file" required><br>
+    <input type="submit" value="Envoyer">
+</form>
+
+<!-- Après traitement : proposer les fichiers -->
+<h2>Fichiers générés :</h2>
+<ul>
+    <li><a href="EmailsT.txt" download>EmailsT.txt</a></li>
+    <li><a href="adressesNonValides.txt" download>adressesNonValides.txt</a></li>
+    <li><a href="emails_gmail.com.txt" download>emails_gmail.com.txt</a></li>
+    <!-- idem pour les autres domaines -->
+</ul>
+
+</body>
+</html>
