--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <h1>Gestion des Emails</h1>
 
 <!-- Upload fichier Emails.txt -->
-<form action="upload.php" method="post" enctype="multipart/form-data">
+<form action="traitement.php" method="post" enctype="multipart/form-data">
     <label for="file">Télécharger Emails.txt :</label><br>
     <input type="file" name="file" required><br>
     <input type="submit" value="Envoyer">
 </form>
 <!-- Formulaire pour ajouter une nouvelle adresse email -->
 <h2>Ajouter une adresse email</h2>
-<form action="ajoutEmail.php" method="post" onsubmit="return validerFormulaire()">
+<form action="traitement.php" method="post" onsubmit="return validerFormulaire()">
     <label for="email">Nouvel email :</label><br>
     <input type="email" name="email" id="email" required><br>
     <input type="submit" value="Ajouter">
